     Check cicada-{learn,mert}{,-moses}.py, not *.sh equivalents.
New: added cutoff threshold for ghkm/tree extraction to prune out rare elementary trees in advance.
New: added remove-head for removing nodes with '*' as non-temrinal, and re-implemented debinarize which shares the same code
Deprecated: bash based scripts
Deprecated: dependency structure filters: cicada_filter_{conll,mst,cabocha} and are merged into cicada_filter_dependency
Removed terminal-binarization and re-wrote as dependency-binarization
Better parallelization by cicada{,_mpi} with more balanced input/output

2012-9-6
New: added feature selection by simple kbest merging (for cicada_learn_online_{kbest,}_mpi)
New: added weight pusing toward root, frontier and left-corner
New: added feature-vector intersection computation for weight pusing
New: added sort-topologically operation so that we can verify the forest constructed by 3rd parties.
New: added # of non-terminal crossing features, singleton features, and type-based features
New: added L0 prior for count-based lexicon model induciton (cicada_lexicon)

2012-7-18
Bugfix: variational decoding and bleu/bleuS computation on a forest :(
Bugfix: unique kbest derivations :(
INCOMPATIBLE CHANGE by adding loss/reward to evaluation statistics, and always use loss() (no negative-Bleu, but 1-Bleu for tuning)
INCOMPATIBLE CHANGE by better ITG parsing: use of pialign-style parsing with simple outside estimates
Better indexing: prune away unused space for indexed (tree-)grammar(s)
New: added PYP-pos, an unsupervised pos induction (currently, we support training, and no pos assinger exists)
New: added PYP-pialign, an unsupervised phrasal ITG aligner! (currently, we support training, and no phrasal aligner exists)
New: added BleuS, Inv-WER and CDER for MT evaluation
New: added cicada_filter_alignment with visualization mode for the ease of word alignment analysis (combined with less -R or lv -c!)
New: added PYP-itg, an unsupervised ITG word-aligner!